--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <section class="brasao">
-            <img src="./img/pngwing.com.png">
+            <img src="./img/capivara.png">
         </section>
         <h3>Cadastre-se aqui para ficar por dentro dos eventos da cidade de Juiz de Fora!</h3>
         <div class="container">
